--- a/FiltierIndex.html
+++ b/FiltierIndex.html
@@ -85,12 +85,36 @@
 	<main>
 		<div>
 			<h1>Reaching Millions Worldwide!</h1>
-			<img src="press-release-22-march-2017-water-worldwide.jpg" alt="something">
-			<!--For later for slideshow...
-			<img src="Water-filter-group-1.jpg" alt="something">
-			<img src="FILTER.jpg" alt="something">
-			<img src="aqua-5.jpg" alt="something">
--->
+			
+			<div class="slideshow-container">
+
+				<div class="mySlides fade">
+				  <div class="numbertext">1 / 3</div>
+				  <img src="press-release-22-march-2017-water-worldwide.jpg" alt="image1" class="slideshowImg">
+				</div>
+
+				<div class="mySlides fade">
+				  <div class="numbertext">2 / 3</div>
+				  <img src="Water-filter-group-1.jpg" alt="image2" class="slideshowImg">
+				</div>
+
+				<div class="mySlides fade">
+				  <div class="numbertext">3 / 3</div>
+				  <img src="FILTER.jpg" alt="img3" class="slideshowImg">
+				</div>
+
+				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+				<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+				</div>
+				<br>
+
+				<div style="text-align:center">
+				  <span class="dot" onclick="currentSlide(1)"></span> 
+				  <span class="dot" onclick="currentSlide(2)"></span> 
+				  <span class="dot" onclick="currentSlide(3)"></span> 
+				</div>
+			
 			<br>
 			<button>See How</button>
 		</div>
@@ -152,5 +176,7 @@
 			<img src="iconfinder_social-03_3146786.png" alt="Instagram">
 		</a>
 	</footer>
+	
+	<script src="Filtier.js" type="text/javascript"></script>
 </body>
 </html>
