Most files so far
Added a lot of files

--- a/FiltierDonate.html
+++ b/FiltierDonate.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="Filtier, Donations, Filter, Filtration, Company">
 <meta name="author" content="Wei Jian Zhen, Gareth Felix, Dyanna Arias">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Filtier</title>
+<title>Donate</title>
 <link rel="stylesheet" type="text/css" href="Filtier.css">
 <link rel="icon" type="image/png" sizes="16x16" href="d9d68f0db7e7b0d0f5caac1983308924.ico/favicon-16x16.png">
 </head>
@@ -81,111 +81,49 @@
 	</nav>
 	
 	<main>
-		<div>
-			<h1>Reaching Millions Worldwide!</h1>
+		<h1>Donations</h1>
+		<h3>Donate Money</h3>
+		<form>
+			<button>$10</button>
+			<button>$25</button>
+			<button>$50</button>
+			<button>$75</button>
+			<button>$100</button>
+			<button>$250</button>
+			<button>$500</button>
+			<button>$1000</button>
 			
-			<div class="slideshow-container">
-
-				<div class="mySlides fade">
-				  <div class="numbertext">1 / 3</div>
-				  <img src="press-release-22-march-2017-water-worldwide.jpg" alt="image1" class="slideshowImg">
-				</div>
-
-				<div class="mySlides fade">
-				  <div class="numbertext">2 / 3</div>
-				  <img src="Water-filter-group-1.jpg" alt="image2" class="slideshowImg">
-				</div>
-
-				<div class="mySlides fade">
-				  <div class="numbertext">3 / 3</div>
-				  <img src="FILTER.jpg" alt="img3" class="slideshowImg">
-				</div>
-
-				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-				<a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-				</div>
-				<br>
-
-				<div style="text-align:center">
-				  <span class="dot" onclick="currentSlide(1)"></span> 
-				  <span class="dot" onclick="currentSlide(2)"></span> 
-				  <span class="dot" onclick="currentSlide(3)"></span> 
-				</div>
-			
-			<br>
-			<button type="button" class="indexBtn">See How</button>
-		</div>
+			<input type="text" placeholder="$____________________">
+			<input type="submit" value="submit">
+		</form>
 		
 		<br>
 		<br>
 		
-		<div class="sections" id="donateDiv">
-			<h1>Support the People in Need!</h1>
-			<img src="CZjNM7rWwAANM6a-520x337.jpg" alt="something" id="donateImage">
-			
-			<br>
-			<br>
-			
-			<button type="button" class="indexBtn">Donate</button>
-		</div>
-		
+		<h3>Donate Water</h3>
+		<button>1 liter</button>
+		<button>2 liters</button>
+		<button>5 liters</button>
+		<button>10 liters</button>
+		<button>25 liters</button>
 		<br>
-		
-		<div class="sections" id="learnDiv">
-			<h1>Want to Learn How to Filter Water?</h1>
-			<img src="Learn.png" alt="learn" id="learnImage">
-			
-			<br>
-			<br>
-			
-			<button type="button" class="indexBtn">Yes Please!</button>
-		</div>
-		
 		<br>
-		
-		<div class="sections" id="volunteerDiv">
-			<h1>Volunteer!</h1>
-			
-			<img src="fathom-water-filters-2.jpg" alt="volunteer" id="volunteerImage">
-			
-			<br>
-			<br>
-			
-			<button type="button" class="indexBtn">Yes!</button>
-		</div>
 	</main>
 	
 	<br>
 	
 	<footer>
-		<a href="About.html">About</a>
-		<a href="FiltierPrivacyPolicy.html">Privacy Policy</a>
-		<a href="FiltierTermsofUse.html">Terms of Use</a>
+		<a href="#">About</a>
+		<a href="#">Privacy Policy</a>
+		<a href="#">Terms of Use</a>
 		
 		<br>
 		<br>
 		
 		<!--Placeholder copied from website. Do not use in final product.-->
 		<a href="tel:5554280099">Call us at 555-428-0099</a>
-		<a href="#">CustomerService@Filtier.org</a>
-		
-		<br>
-		<br>
-		
-		<a href="https://www.linkedin.com/">
-			<img src="iconfinder_1_Linkedin_unofficial_colored_svg_5296501 (1).png" alt="Linkden">
-		</a>
-		
-		<a href="https://twitter.com/?lang=en">
-			<img src="iconfinder_1_Twitter3_colored_svg_5296516.png" alt="Twitter">
-		</a>
-		
-		<a href="https://www.instagram.com/?hl=en">
-			<img src="iconfinder_social-03_3146786.png" alt="Instagram">
-		</a>
+		<a href="#">Email Address</a>
+		<a href="#">Social Media Links</a>
 	</footer>
-	
-	<script src="Filtier.js" type="text/javascript"></script>
 </body>
 </html>
